--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,65 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*@import "~leaflet/dist/leaflet.css";
+@import "~leaflet.markercluster/dist/MarkerCluster.css";
+@import "~leaflet.markercluster/dist/MarkerCluster.Default.css";*/
+
+
+.map {
+  width: 100%;
+  height: 62vh;
+  border-style: solid;
+  border-color: white;
+  background-color: black;
+  padding-right: 0%;
+  padding-left: 0%;
+}
+
+.Banner {
+  width: 100%;
+  height: 10vh;
+  border-style: solid;
+  border-color: gray;
+  background-color: black;
+}
+
+.Tabs {
+  width: 100%;
+  height: 6vh;
+  border-style: solid;
+  border-color: grey;
+  background-color: black;
+  margin: 0;
+  padding: 0;
+}
+
+.TweetsArea {
+  width: 100%;
+  height: 62vh;
+  border-style: solid;
+  border-color: grey;
+  background-color: black;
+  margin: 0;
+  padding: 0;
+
+}
+
+.TimeseriesCurve {
+  width: 100%;
+  height: 22vh;
+  border-style: solid;
+  border-color: grey;
+  background-color: black;
+
+}
+
+.searchbar {
+  height: 8vh;
+  padding: 0%;
+}
+
+.tweetcontent {
+  width: 100%;
+  height: 54vh;
+  padding: 0%;
+}
